<resources>
    <string name="app_name">Spunky</string>
    <string name="another_one">Spunky</string>
    <string name="button_crear">Crear Juego</string>
    <string name="button_unirse">Unirse</string>
    <string name="button_jugar">Jugar</string>
    <string name="label_spunky">Spunky</string>
    <string name="button_familia">Familia</string>
    <string name="button_amigos">Amigos</string>
    <string name="button_trabajo">Trabajo</string>
    <string name="button_ninos">Niños</string>
    <string name="label_tipo_grupo">Escoge el tipo de grupo</string>
    <string name="label_tipo_edad">Hay personas...</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="radio_familia">Familia</string>
    <string name="button_desconocidos">Desconocidos</string>
    <string name="text_menores">Menores</string>
    <string name="text_jovenes">Jóvenes</string>
    <string name="text_adultos">Adultos</string>
    <string name="text_mayores">Mayores</string>
    <string name="button_siguiente">Siguiente</string>
    <string name="label_edades">Edades</string>
    <string name="label_construccion">Estamos trabajando para brindarte la mejor experiencia</string>

    <string name="label_informacion">Información</string>
    <string name="label_edades_completar">Selecciona por lo menos un rango de edades (menores, jovenes, adultos, mayores )</string>
    <string name="button_ok">Ok</string>
    <string name="label_completar">Selecciona por lo menos un grupo (amigos, familia, trabajo, desconocidos)</string>
    <string name="label_puntos">¡Correcto! Ganaste 2 puntos</string>
    <string name="label_incorrecto">Respuesta incorrecta</string>
    <string name="label_Mpuntos">¡Incorrecto! No ganaste ningún punto</string>
    <string name="label_correcto">Respuesta correcta</string>
    <string name="jugar_charadas">Jugar charadas</string>
    <string name="jugar_trivia">Jugar Trivia</string>
    <string name="jugar_verdad">Jugar verdad</string>

    <string name="label_ronda">Ronda 1</string>

    <string name="charadas_title">¡Charadas!</string>
    <string name="charadas_desc">Piensa, imita, dibuja y adivina la palabra</string>

    <string name="trivia_title">¡Trivia!</string>
    <string name="trivia_desc">Pon a funcionar tu cerebro y contesta la pregunta. Ya veremos si eres un sabelotodo </string>

    <string name="verdad_title">¡Verdad o reto!</string>
    <string name="verdad_desc">¿Te atreves?</string>
    <string name="button_volver">Volver</string>

    <string name="label_conexion">En este momento no tienes conexión a internet. Puedes agregar a tus amigos por Bluetooth o encender tu conexión a internet.</string>
    <string name="label_conexion_bluetooth">En este momento no tienes conexión a internet. Puedes unirte al juego via bluetooth.</string>
    <string name="label_conexion_nobluetooth_nowifi">En este momento no tienes conexión a internet, y tu dispositivo no tiene bluetooth. Por favor vuelve a intentar cuando tengas conexion a internet</string>


    <string name="button_bluetooth">Usar bluetooth</string>
    <string name="label_bluetooth">Tu dispositivo no soporta Bluetooth, intenta conectarte nuevamente utilizando internet.</string>

    <string name="label_compartir">¡Comparte el código de tu juego!</string>
    <string name="buttonJugarYA">Empezar</string>

    <string name="txt_unirse">¿Cuál es tu apodo?</string>
    <string name="txt_codigo">Escribe el código del juego</string>
    <string name="button_unirme">Unirme</string>

    <string name="label_id_error">El id ingresado no corresponde con un juego en curso</string>
    <string name="title_error">Error</string>
    <string name="label_apodo">¿Cuál es tu apodo?</string>
    <string name="label_escribir_codigo">Escribe el código del juego</string>
    <string name="label_unirse">Recuerda que debes unirte al juego  usando internet si tienes el código. De lo contrario, debes usar bluetooth</string>
    <string name="button_continue_internet">Continuar con internet</string>
    <string name="button_continue_bluetooth">Usar bluetooth</string>
    <string name="label_errorReto">Por Favor Escribe un Reto</string>


    <string name="txt_resultados">Tabla de resultados</string>
    <string name="button_enviar_reto">Enviar reto</string>
    <string name="title_activity_record_memory">RecordMemoryActivity</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="title_activity_take_video">TakeVideoActivity</string>
    <string name="toma_un_video">Toma un Video</string>
    <string name="salir">SALIR</string>
    <string name="play">PLAY</string>
    <string name="capturar_nuevo_recuerdo">CAPTURAR NUEVO RECUERDO</string>
    <string name="magnifico_video">¡Magnifico Video!</string>
    <string name="toma_una_fotografia">Toma una Fotografia</string>
    <string name="recuerda_este_momento">¡Recuerda este momento!</string>
    <string name="label_nickname_error">Por favor ingresa un apodo</string>
    <string name="proximamente">Proximamente</string>

    <string name="label_code_missing">Por favor espera a que un código sea asignado al juego para empezar</string>
    <string name="btn_volver_jugar">Volver a jugar</string>
    <string name="label_escribe_reto">Escribe el Reto</string>
    <string name="label_enviar_reto">Enviar reto</string>
    <string name="label_envia_un_reto">¡Envia un Reto!</string>
    <string name="label_gira_derecha">¡Gira tu telefono a la derecha para enviar el reto!</string>
    <string name="label_first_no_internet">Por favor conéctate a internet para descargar las juegos</string>


</resources>
