<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_elegir_juego"
    tools:context="com.ppg.spunky_kotlin.ElegirJuegoActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dots_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha=".5"
        android:layout_above="@id/layoutDots"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_jugarCharadas"
        android:layout_height="137dp"
        android:layout_width="300dp"
        android:background="@drawable/my_button"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/jugar_charadas"
        android:textSize="25sp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/btn_jugarTrivia"
        android:layout_height="137dp"
        android:layout_width="300dp"
        android:background="@drawable/my_button"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/jugar_trivia"
        android:textSize="25sp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_jugarVerdad"
        android:layout_height="137dp"
        android:layout_width="300dp"
        android:background="@drawable/my_button"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/jugar_verdad"
        android:textSize="25sp"
        android:layout_marginBottom="100dp"
        android:gravity="center"

        android:textColor="@android:color/white" />

</RelativeLayout>
